# knn-classifier

./: pyproject.toml
knn_classifier/: __init__.py  __main__.py  knn.ipynb  knn_classifier.py  main.ipynb  math.py  plot.py
