[tool.poetry]
name = "knn-classifier"
version = "0.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "knn_classifier"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = ".git,.mypy_cache,.pytest_cache,.venv,.vscode,imhex,output,poetry.lock,pyproject.toml"
